# machine-learning-lab

./: pyproject.toml
machine_learning/: ai-analyzes-human-lang.py  code-read-from-typing.py
