[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["NitichaiAom <NitichaiSawangsai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gTTS = "^2.2.3"
playsound = "^1.3.0"
pyobjc = "^8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
